--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,13 @@
     <artifactId>commons-lang3</artifactId>
     <version>3.14.0</version>
 </dependency>
+
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.12.0</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
 </project>
